2006-07-22  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bug 348329 make gnome-print dependency optional
	
2006-07-22  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Require cairo-png
	
2006-07-20  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c: Fix build breakage caused by newer freetype versions
	(https://sourceforge.net/project/shownotes.php?release_id=416463&group_id=3157). 
	For some reason, they thought that breaking API compatability
	in such a low-level, widely-used library was ok.
	
2006-06-28  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-private.h: Use G_GNUC_PRETTY_FUNCTION so as to not depend on
	GCC extensions (3461163)

	* gdk-pixbuf-loader/Makefile.am: Remove trailing slash so that
	install.sh works on Solaris. It seems that it doesn't like test -d dir/
	
2006-05-14  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: New better way to invoke gtk-doc (see 341421)
	* Makefile.am: Ditto
	* doc/Makefile.am: Ditto
	* gtk-doc.make: Removed. Auto-generated
	
2006-05-07  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Fix build on GTK+ >= 2.9. (329850)
	
2006-05-04  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c: Fix some cast warnings (340666)
	
2006-05-03  Emmanuel Pacaud

	* rsvg-base.c: Fix rounding error in rsvg_pixbuf_from_file() (340664)
	
2006-05-03  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Require cairo 1.1.2 or better
	* rsvg-convert.c: Remove code made unecessary by cairo 1.1.2
	
2006-05-03  Paolo Borelli  <pborelli@katamail.com>

	* rsvg-filter.c:
	* rsvg-marker.c:
	* rsvg-mask.c:
	* rsvg-paint-server.c:
	* rsvg-private.h:

	Factor out rsvg_get_url_string. Bug 340505.

2006-05-03  Paolo Borelli  <pborelli@katamail.com>

	* rsvg-text.[ch]: pass the lenght to rsvg_make_valid_utf8.
	* rsvg-base.c: avoid some strdups and avoid a leak in the !utf8
	case of rsvg_characters(). Bug 340471.

2006-05-02 Dom Lachowicz <cinamod@hotmail.com>
