@@ -1,6 +1,8 @@
 2006-07-22  Dom Lachowicz <cinamod@hotmail.com>
 
 	* configure.in: Bug 348329 make gnome-print dependency optional
+	* rsvg-text.c: Don't leak PangoFt2 fonts (bug 344235). This is a
+	work-around for Pango bug 143542.
 	
 2006-07-22  Dom Lachowicz <cinamod@hotmail.com>
 
